--- a/Alexeev_Tarabukin/index.html
+++ b/Alexeev_Tarabukin/index.html
@@ -17,10 +17,11 @@
 		</TR>
 		<TR>
 			<TD>
-			  <a href="Specialisations.php"> <P>Специалисты</P> </a>
+			  <a href="Specialisations.php"> <P>Специальности</P> </a>
 			  <a href="Patients.php"> <P>Наши пациенты</P> </a>
 			  <a href="Workers.php"> <P>Наши работники</P> </a>
 			  <a href="Diagnosis.php"> <P>Диагнозы</P> </a>
+			  <a href="Specialists.php"> <P>Наши специалисты</P> </a>
 			</TD>
 		</TR>
  </body>
