--- a/Alexeev_Tarabukin/index.html
+++ b/Alexeev_Tarabukin/index.html
@@ -1,20 +1,23 @@
 <html>
- <head>
-  <title>AlexeevTarabukin</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
- </head>
- <body>
-	<P style="color:red; font-size:18">
-	Welcome to the our site!<BR>
-	<BR>
-	Please feel free to browse thorugh the site.
-	</P>
- 	<meta charset="utf-8">
-	
-	<table width="100%" cellspacing="0" border="1">	
-		<TR>
-			<TH>functions</TH>
-		</TR>
+<head>
+	<title>AlexeevTarabukin</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+	<div id="header">
+	<h5 align="center"> Welcome to the website our hospital! Opening Hours: Monday to Saturday 8am to 9pm</h5>
+	</div>
+	<div id="content">
+	<h1 align="center"> Welcome to the website our hospital! Opening Hours: Monday to Saturday 8am to 9pm</h1>
+	</div>
+<div id="container">
+<div id="navigation">
+	<a a href="Specialisations.php" title="1">Специальности</a><br>
+	<a a href="Patients.php" title="2">Наши пациенты</a><br>
+	<a href="Workers.php" title="3">Наши работники</a><br>
+	<a href="Diagnosis.php" title="4">Диагнозы</a><br>
+	<a href="Specialists.php" title="5">Наши специалисты</a><br>
+</div>
 		<TR>
 			<TD>
 			  <a href="Specialisations.php"> <P>Специальности</P> </a>
@@ -24,5 +27,6 @@
 			  <a href="Specialists.php"> <P>Наши специалисты</P> </a>
 			</TD>
 		</TR>
+	</div>
  </body>
 </html>
