--- a/Alexeev_Tarabukin/index.html
+++ b/Alexeev_Tarabukin/index.html
@@ -12,11 +12,14 @@
 	</div>
 <div id="container">
 <div id="navigation">
-	<a a href="Specialisations.php" title="1">Специальности</a><br>
-	<a a href="Patients.php" title="2">Наши пациенты</a><br>
-	<a href="Workers.php" title="3">Наши работники</a><br>
-	<a href="Diagnosis.php" title="4">Диагнозы</a><br>
-	<a href="Specialists.php" title="5">Наши специалисты</a><br>
+	<a href="Specialisations.php"> <P>Специальности</P> </a>
+			  <a href="Patients.php"> <P>Наши пациенты</P> </a>
+			  <a href="Workers.php"> <P>Наши работники</P> </a>
+			  <a href="Diagnosis.php"> <P>Диагнозы</P> </a>
+			  <a href="Specialists.php"> <P>Наши специалисты</P> </a>
+			  <a href="ConsultingRooms.php"> <P>Кабинеты</P> </a>
+			  <a href="PatientsDiagnosis.php"> <P>Диагнозы пациентов</P> </a>
+			  <a href="Sessions.php.php"> <P>Сеансы</P> </a>
 </div>
 		<TR>
 			<TD>
@@ -25,6 +28,9 @@
 			  <a href="Workers.php"> <P>Наши работники</P> </a>
 			  <a href="Diagnosis.php"> <P>Диагнозы</P> </a>
 			  <a href="Specialists.php"> <P>Наши специалисты</P> </a>
+			  <a href="ConsultingRooms.php"> <P>Кабинеты</P> </a>
+			  <a href="PatientsDiagnosis.php"> <P>Диагнозы пациентов</P> </a>
+			  <a href="Sessions.php.php"> <P>Сеансы</P> </a>
 			</TD>
 		</TR>
 	</div>
