--- a/Alexeev_Tarabukin/index.html
+++ b/Alexeev_Tarabukin/index.html
@@ -12,25 +12,18 @@
 	</div>
 <div id="container">
 <div id="navigation">
-	<a href="Specialisations.php"> <P>Специальности</P> </a>
-			  <a href="Patients.php"> <P>Наши пациенты</P> </a>
-			  <a href="Workers.php"> <P>Наши работники</P> </a>
-			  <a href="Diagnosis.php"> <P>Диагнозы</P> </a>
-			  <a href="Specialists.php"> <P>Наши специалисты</P> </a>
-			  <a href="ConsultingRooms.php"> <P>Кабинеты</P> </a>
-			  <a href="PatientsDiagnosis.php"> <P>Диагнозы пациентов</P> </a>
-			  <a href="Sessions.php.php"> <P>Сеансы</P> </a>
+	<a href="Specialisations.php"> <P>Specialisations</P> </a>
+			  <a href="Specialists.php"> <P>Specialists</P> </a>
+			  <a href="Patients.php"> <P>Our Patients</P> </a>
+			  <a href="Workers.php"> <P>Our workers</P> </a>
+			  <a href="Diagnosis.php"> <P>Diagnosis lib</P> </a>
+			  <a href="ConsultingRooms.php"> <P>Consulting Rooms</P> </a>
+			  <a href="PatientsDiagnosis.php"> <P>Our patients diagnosis</P> </a>
+			  <a href="Sessions.php.php"> <P>Sessions</P> </a>
 </div>
 		<TR>
 			<TD>
-			  <a href="Specialisations.php"> <P>Специальности</P> </a>
-			  <a href="Patients.php"> <P>Наши пациенты</P> </a>
-			  <a href="Workers.php"> <P>Наши работники</P> </a>
-			  <a href="Diagnosis.php"> <P>Диагнозы</P> </a>
-			  <a href="Specialists.php"> <P>Наши специалисты</P> </a>
-			  <a href="ConsultingRooms.php"> <P>Кабинеты</P> </a>
-			  <a href="PatientsDiagnosis.php"> <P>Диагнозы пациентов</P> </a>
-			  <a href="Sessions.php.php"> <P>Сеансы</P> </a>
+			  
 			</TD>
 		</TR>
 	</div>
