--- a/Alexeev_Tarabukin/index.html
+++ b/Alexeev_Tarabukin/index.html
@@ -23,7 +23,21 @@
 </div>
 		<TR>
 			<TD>
-			  
+			  <P>Add Patients:</P>
+			  <form action="AddPatients.php" method="post">
+				FirstName: <input type="text" name="FirstName">
+          		  	<br>
+				LastName: <input type="text" name="LastName">
+          		  	<br>
+				PassportSeries: <input type="text" name="PassportSeries">
+          		  	<br>
+				PassportNumber: <input type="text" name="PassportNumber">
+          		  	<br>
+				Adress: <input type="text" name="Adress">
+          		  	<br>
+
+            		  	<input type="submit" value="AddPatients">
+      			  </form>
 			</TD>
 		</TR>
 	</div>
