--- a/Alexeev_Tarabukin/index.html
+++ b/Alexeev_Tarabukin/index.html
@@ -25,13 +25,15 @@
 			<TD>
 			  <P>Add Patients:</P>
 			  <form action="AddPatients.php" method="post">
-				FirstName: <input type="text" name="FirstName">
+				First Name: <input type="text" name="FirstName">
           		  	<br>
-				LastName: <input type="text" name="LastName">
+				Last Name: <input type="text" name="LastName">
           		  	<br>
-				PassportSeries: <input type="text" name="PassportSeries">
+          		Fathers Name: <input type="text" name="FathersName">
           		  	<br>
-				PassportNumber: <input type="text" name="PassportNumber">
+				Passport Series: <input type="text" name="PassportSeries">
+          		  	<br>
+				Passport Number: <input type="text" name="PassportNumber">
           		  	<br>
 				Adress: <input type="text" name="Adress">
           		  	<br>
