--- a/Alexeev_Tarabukin/index.html
+++ b/Alexeev_Tarabukin/index.html
@@ -19,7 +19,7 @@
 			  <a href="Diagnosis.php"> <P>Diagnosis lib</P> </a>
 			  <a href="ConsultingRooms.php"> <P>Consulting Rooms</P> </a>
 			  <a href="PatientsDiagnosis.php"> <P>Our patients diagnosis</P> </a>
-			  <a href="Sessions.php.php"> <P>Sessions</P> </a>
+			  <a href="Sessions.php"> <P>Sessions</P> </a>
 </div>
 		<TR>
 			<TD>
