--- a/Alexeev_Tarabukin/index.html
+++ b/Alexeev_Tarabukin/index.html
@@ -8,7 +8,7 @@
 	<h5 align="center"> Welcome to the website our hospital! Opening Hours: Monday to Saturday 8am to 9pm</h5>
 	</div>
 	<div id="content">
-	<h1 align="center"> Welcome to the website our hospital! Opening Hours: Monday to Saturday 8am to 9pm</h1>
+	<h1 align="center"> Project: Hospital by Stas Alexeev and Tarabukin Ivan </h1>
 	</div>
 <div id="container">
 <div id="navigation">
@@ -25,20 +25,19 @@
 			<TD>
 			  <P>Add Patients:</P>
 			  <form action="AddPatients.php" method="post">
-				First Name: <input type="text" name="FirstName">
-          		  	<br>
-				Last Name: <input type="text" name="LastName">
-          		  	<br>
-          		Fathers Name: <input type="text" name="FathersName">
-          		  	<br>
-				Passport Series: <input type="text" name="PassportSeries">
-          		  	<br>
-				Passport Number: <input type="text" name="PassportNumber">
-          		  	<br>
-				Adress: <input type="text" name="Adress">
-          		  	<br>
-
-            		  	<input type="submit" value="AddPatients">
+				First Name <input type="text" name="FirstName">
+          		  	<br><br>
+				Last Name <input type="text" name="LastName">
+          		  	<br><br>
+          		Fathers Name <input type="text" name="FathersName">
+          		  	<br><br>
+				Passport Series <input type="text" name="PassportSeries">
+          		  	<br><br>
+				Passport Number <input type="text" name="PassportNumber">
+          		  	<br><br>
+				Adress <input type="text" name="Adress">
+          		  	<br><br>
+          		  	<input type="submit" value="AddPatients">
       			  </form>
 			</TD>
 		</TR>
