--- a/Alexeev_Tarabukin/index.html
+++ b/Alexeev_Tarabukin/index.html
@@ -37,7 +37,26 @@
           		  	<br><br>
 				Adress <input type="text" name="Adress">
           		  	<br><br>
-          		  	<input type="submit" value="AddPatients">
+          		  	<input type="submit" value="AddPatients" id="button1">
+      			  </form>
+			</TD>
+		</TR>
+		<br><br><br>
+		<TR>
+			<TD>
+			  <P>Add Workers:</P>
+			  <form action="AddWorkers.php.php" method="post">
+				Passport <input type="text" name="Passport">
+          		  	<br><br>
+				First Name <input type="text" name="FirstName">
+          		  	<br><br>
+				Last Name <input type="text" name="LastName">
+          		  	<br><br>
+          		Fathers Name <input type="text" name="FathersName">
+          		  	<br><br>
+				Science Degree <input type="text" name="ScienceDegree">
+          		  	<br><br>
+          		  	<input type="submit" value="AddWorkers" id="button2">
       			  </form>
 			</TD>
 		</TR>
