--- a/Alexeev_Tarabukin/index.html
+++ b/Alexeev_Tarabukin/index.html
@@ -45,7 +45,7 @@
 		<TR>
 			<TD>
 			  <P>Add Workers:</P>
-			  <form action="AddWorkers.php.php" method="post">
+			  <form action="AddWorkers.php" method="post">
 				Passport <input type="text" name="Passport">
           		  	<br><br>
 				First Name <input type="text" name="FirstName">
