--- a/Alexeev_Tarabukin/index.html
+++ b/Alexeev_Tarabukin/index.html
@@ -60,6 +60,17 @@
       			  </form>
 			</TD>
 		</TR>
+		<br><br><br>
+		<TR>
+			<TD>
+			  <P>Add Diagnosis:</P>
+			  <form action="AddDiagnosis.php" method="post">
+				New Diagnosis <input type="text" name="nameDia">
+          		  	<br><br>
+          		  	<input type="submit" value="AddDiagnosis" id="button3">
+      			  </form>
+			</TD>
+		</TR>
 	</div>
  </body>
 </html>
