--- a/Alexeev_Tarabukin/index.html
+++ b/Alexeev_Tarabukin/index.html
@@ -71,6 +71,17 @@
       			  </form>
 			</TD>
 		</TR>
+		<br><br><br>
+		<TR>
+			<TD>
+			  <P>Add Specialisations:</P>
+			  <form action="AddSpecialisations.php" method="post">
+				New Diagnosis <input type="text" name="SpName">
+          		  	<br><br>
+          		  	<input type="submit" value="AddSpecialisations" id="button4">
+      			  </form>
+			</TD>
+		</TR>
 	</div>
  </body>
 </html>
