--- a/Alexeev_Tarabukin/index.html
+++ b/Alexeev_Tarabukin/index.html
@@ -82,6 +82,21 @@
       			  </form>
 			</TD>
 		</TR>
+		<br><br><br>
+		<TR>
+			<TD>
+			  <P>Add ConsultingRooms:</P>
+			  <form action="AddConsultingRooms.php" method="post">
+				New Cabinet <input type="text" name="NUMcab">
+          		  	<br><br>
+          		StartWork['10:00'] <input type="text" name="StartWork">
+          		  	<br><br>
+          		StartWork['20:00'] <input type="text" name="EndWork">
+          		  	<br><br>
+          		  	<input type="submit" value="AddSpecialisations" id="button5">
+      			  </form>
+			</TD>
+		</TR>
 	</div>
  </body>
 </html>
