--- a/Alexeev_Tarabukin/index.html
+++ b/Alexeev_Tarabukin/index.html
@@ -76,7 +76,7 @@
 			<TD>
 			  <P>Add Specialisations:</P>
 			  <form action="AddSpecialisations.php" method="post">
-				New Diagnosis <input type="text" name="SpName">
+				New Specialisations <input type="text" name="SpName">
           		  	<br><br>
           		  	<input type="submit" value="AddSpecialisations" id="button4">
       			  </form>
