--- a/Alexeev_Tarabukin/index.html
+++ b/Alexeev_Tarabukin/index.html
@@ -100,41 +100,24 @@
 		<br><br><br>
 		<TR>
 			<TD>
-				<?php
-include('config.php');	
-$link = mysqli_connect($server, $user, $password, $database)
-	or die('Error: Unable to connect: ' . mysqli_connect_error());
-mysql_select_db("L",$link);
-$Passport=$_GET['Passport']; 
-  
-$res =  mysql_query("SELECT Passport FROM Workers",$link); 
-echo" 
-<form action=AddSessions.php?Passport=$Passport’ method=’get’> 
-<select name=’Passport’> 
-    <option value=’0?>Выбирете осведомленность</option>"; 
-while($row = mysql_fetch_assoc($res)){ 
-    ?> 
-    <option value="<?=$row['id']?>"><?=$row['Passport']?></option> 
-    <? 
-}?>
 			  <P>Add Sessions:</P>
-			  <?php
-			  include('config.php');	
-				$link = mysqli_connect($server, $user, $password, $database)
-				or die('Error: Unable to connect: ' . mysqli_connect_error());
-				mysql_select_db("L",$link);
-				$Passport=$_GET['Passport']; 
-  
-				$res =  mysql_query("SELECT Passport FROM Workers",$link); 
-				echo" 
-				<form action=AddSessions.php?Passport=$Passport’ method=’get’> 
-				<select name=’Passport’> 
-   				 <option value=’0?>Выбирете осведомленность</option>"; 
-				while($row = mysql_fetch_assoc($res)){ 
-    			?> 
-   				 <option value="<?=$row['id']?>"><?=$row['Passport']?></option> 
-   				 <? 
-				}?>
+			  <form action="AddSessions.php" method="post">
+				Пока номер специалиста id, не успел реализовать выпадающий список всех специалистов <input type="text" name="specId">
+          		  	<br><br>
+          		Начало сеанса['10:00'] <input type="text" name="timeStart">
+          		  	<br><br>
+          		Конец сеанса ['10:05'] <input type="text" name="timeFinish">
+          		  	<br><br>
+          		Пока номер пациента по id, не успел реализовать выпадающий список всех пациентов <input type="text" name="pathId">
+          		  	<br><br>
+          		Пока номер диагноза по id, не успел реализовать выпадающий список всех диагнозов <input type="text" name="iddiagnosis">
+          		  	<br><br>
+          		Назначено лечение <input type="text" name="lechenie">
+          		  	<br><br>
+          		Пока номер следующего врача(Специальности, не специалиаста)) по id, не успел реализовать выпадающий список всех специальностей <input type="text" name="sledSpec">
+          		  	<br><br>
+          		  	<input type="submit" value="AddSpecialisations" id="button6">
+      			  </form>
 			</TD>
 		</TR>
 	</div>
