--- a/Alexeev_Tarabukin/index.html
+++ b/Alexeev_Tarabukin/index.html
@@ -116,7 +116,7 @@
           		  	<br><br>
           		Пока номер следующего врача(Специальности, не специалиаста)) по id, не успел реализовать выпадающий список всех специальностей <input type="text" name="sledSpec">
           		  	<br><br>
-          		  	<input type="submit" value="AddSpecialisations" id="button6">
+          		  	<input type="submit" value="AddSessions" id="button6">
       			  </form>
 			</TD>
 		</TR>
