--- a/Alexeev_Tarabukin/index.html
+++ b/Alexeev_Tarabukin/index.html
@@ -24,7 +24,6 @@
 			<TD>
 				<p> Все эти загатовки заполняют таблицы нашей БазыДанных~ </p>
 				<p> Регистраторша в регистрационной регистрирует пациентов </p>
-				<br><br>
 			  <P>Add Patients:</P>
 			  <form action="AddPatients.php" method="post">
 				First Name <input type="text" name="FirstName">
@@ -46,8 +45,7 @@
 		<br><br><br>
 		<TR>
 			<TD>
-				<p> Лучше какому нибудь админу предоставить возможность добавлять работников, будь то уборщики, врачи, охранники, в свою базу, выставлять информацию про работников и пациентов(пусть это больница решает) дело вебдизайнеров</p>
-				<br><br>
+				<p> Лучше какому нибудь админу предоставить возможность добавлять работников, будь то уборщики, врачи, охранники, в свою базу, выставлять информацию про работников и пациентов(пусть это больница решает) это дело вебдизайнеров</p>
 			  <P>Add Workers:</P>
 			  <form action="AddWorkers.php" method="post">
 				Passport <input type="text" name="Passport">
@@ -68,7 +66,6 @@
 		<TR>
 			<TD>
 				<p> Я думаю, что эту функцию можно предоставить всем, чтобы библиотека была обширней, сюда нужно добавлять все существующие диагнозы в мире</p>
-				<br><br>
 			  <P>Add Diagnosis:</P>
 			  <form action="AddDiagnosis.php" method="post">
 				New Diagnosis <input type="text" name="nameDia">
@@ -110,7 +107,7 @@
 		<br><br><br>
 		<TR>
 			<TD>
-				<p> А вот про сеансы интересней, тут наверное предоставить каждому врачу или ассистенту по компьютеру, в загатовке по дефолту будет стоять id этого врача, можно реализовать дефолтную вставку времени начала и конца сеанса по нажатии кнопки начала и по отправке о конце сеанса. Врачу остается выбрать пациента по поиску или по выпадающему списку всех заригестрированных пациентов, выбрать диагнох из нашей обширной библиотеки, а про леечеие по его усмотрению наверно, или же можно тоже привязать к диагнозам загатовки</p>
+				<p> А вот про сеансы интересней, тут наверное предоставить каждому врачу или ассистенту по компьютеру, в загатовке по дефолту будет стоять id этого врача, можно реализовать дефолтную вставку времени начала и конца сеанса по нажатии кнопки начала и по отправке о конце сеанса. Врачу остается выбрать пациента по поиску или по выпадающему списку всех заригестрированных пациентов, выбрать диагноз из нашей обширной библиотеки, а про лечение по его усмотрению наверно, или же можно тоже привязать к диагнозам загатовки</p>
 				<br><br>
 			  <P>Add Sessions:</P>
 			  <form action="AddSessions.php" method="post">
@@ -130,7 +127,8 @@
           		  	<br><br>
           		  	<input type="submit" value="AddSessions" id="button6">
           		  	<br><br>
-          		  	<p></p>>
+          		  	<p>В таблице Sessions будут сохраняться все сеансы происходящие в больнице, к этой таблице привязаны idВрача, idпациента, время начала конца сеанса, диагноз лечение и направление к след.врачу, пока не реализовал сеанс, когда врач последний и следующего врача нет, там если NULL то в таблицу не заполняет.
+          		  	Остается карта пациента, она задумана так: делается запрос на idпациента, потом по этому этому id cобирает все диагнозы за сегодняшнюю дату у пациента в таблице Sessions. Потом уже можно добавлять к карте пациента лист диагнозов за какую сегодняшнюю дату, т.е в следующий раз когда он придет добавит все его диагнозы на след дату</p>
       			  </form>
 			</TD>
 		</TR>
