--- a/Alexeev_Tarabukin/index.html
+++ b/Alexeev_Tarabukin/index.html
@@ -128,7 +128,8 @@
           		  	<input type="submit" value="AddSessions" id="button6">
           		  	<br><br>
           		  	<p>В таблице Sessions будут сохраняться все сеансы происходящие в больнице, к этой таблице привязаны idВрача, idпациента, время начала конца сеанса, диагноз лечение и направление к след.врачу, пока не реализовал сеанс, когда врач последний и следующего врача нет, там если NULL то в таблицу не заполняет.
-          		  	Остается карта пациента, она задумана так: делается запрос на idпациента, потом по этому этому id cобирает все диагнозы за сегодняшнюю дату у пациента в таблице Sessions. Потом уже можно добавлять к карте пациента лист диагнозов за какую сегодняшнюю дату, т.е в следующий раз когда он придет добавит все его диагнозы на след дату</p>
+          		  	Остается карта пациента, она задумана так: делается запрос на idпациента, потом по этому этому id cобирает все диагнозы за сегодняшнюю дату у пациента в таблице Sessions. Потом уже можно добавлять к карте пациента лист диагнозов за какую сегодняшнюю дату, т.е в следующий раз когда он придет добавит все его диагнозы на след дату. 
+          		  	Карту пациента не успели сделать.</p>
       			  </form>
 			</TD>
 		</TR>
