--- a/Alexeev_Tarabukin/index.html
+++ b/Alexeev_Tarabukin/index.html
@@ -111,7 +111,22 @@
 				<br><br>
 			  <P>Add Sessions:</P>
 			  <form action="AddSessions.php" method="post">
-				Пока специалист id(Example:1), не успел реализовать выпадающий список всех специалистов <input type="text" name="specId">
+				Пока специалист id(Example:1), не успел реализовать выпадающий список всех специалистов <select name="specId">
+					<?php 
+		                        include('config.php');	
+					$link = mysqli_connect($server, $user, $password, $database)					
+	    					or die('Error: Unable to connect: ' . mysqli_connect_error());
+						
+					$SQLquery = 'SELECT Passport, CONCAT(First_Name, \' \', Last_Name) FROM Workers';
+					$SQLresult = mysqli_query($link,$SQLquery);
+					while ($result = mysqli_fetch_array($SQLresult,MYSQLI_NUM))
+					{
+						printf('<option value=%d>%s</option>',$result[0],$result[1]);
+					}
+					mysqli_free_result($SQLresult);
+					mysqli_close($link);
+					?>
+				</select>
           		  	<br><br>
           		Пока пациент по id(1), не успел реализовать выпадающий список всех пациентов <input type="text" name="pathId">
           		  	<br><br>
