--- a/Alexeev_Tarabukin/index.html
+++ b/Alexeev_Tarabukin/index.html
@@ -109,7 +109,7 @@
 			<TD>
 				<p> А вот про сеансы интересней, тут наверное предоставить каждому врачу или ассистенту по компьютеру, в загатовке по дефолту будет стоять id этого врача, можно реализовать дефолтную вставку времени начала и конца сеанса по нажатии кнопки начала и по отправке о конце сеанса. Врачу остается выбрать пациента по поиску или по выпадающему списку всех заригестрированных пациентов, выбрать диагноз из нашей обширной библиотеки, а про лечение по его усмотрению наверно, или же можно тоже привязать к диагнозам загатовки</p>
 				<br><br>
-				 <a href="AddSessionsHTML.php"> <P>AddSessions</P> </a>
+				<a href="AddSessionsHTML.php"> <P>Жмякайте сюда AddSessions</P> </a>
 			</TD>
 		</TR>
 	</div>
