--- a/Alexeev_Tarabukin/index.html
+++ b/Alexeev_Tarabukin/index.html
@@ -110,6 +110,7 @@
 				<p> А вот про сеансы интересней, тут наверное предоставить каждому врачу или ассистенту по компьютеру, в загатовке по дефолту будет стоять id этого врача, можно реализовать дефолтную вставку времени начала и конца сеанса по нажатии кнопки начала и по отправке о конце сеанса. Врачу остается выбрать пациента по поиску или по выпадающему списку всех заригестрированных пациентов, выбрать диагноз из нашей обширной библиотеки, а про лечение по его усмотрению наверно, или же можно тоже привязать к диагнозам загатовки</p>
 				<br><br>
 				<a href="AddSessionsHTML.php"> <P>Жмякайте сюда AddSessions</P> </a>
+				<p>Остается карта пациента, она задумана так: делается запрос на idпациента, потом по этому этому id cобирает все диагнозы за сегодняшнюю дату у пациента в таблице Sessions. Потом уже можно добавлять к карте пациента лист диагнозов за какую сегодняшнюю дату, т.е в следующий раз когда он придет добавит все его диагнозы на след дату. Карту пациента не успели сделать.</p>
 			</TD>
 		</TR>
 	</div>
